welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:5: error: ')' expected but 'else' found.
    } else {
      ^loneTeen:8: error: ')' expected but 'else' found.
  } else if ((b >= 13) && (b <= 19) {
    ^